resources/ui/widget/css/RtcGitConnector.css
/*
    Don't depend on the styles being within this container style (or any container really).
    Dojo can and does place the elements at different places in the dom from where they were defined.

    If you try something like this:

        .rtcGitConnectorMainLayout .span {
            some style rule...
        }

    You would expect all spans under the element with the "rtcGitConnectorMainLayout" class
    to have the specified style rules. Because the spans may have been moved by dojo this might
    not be the case (e.g. Dialog, Select, ...).

    Just use long descriptive names and apply the classes to the elements directly.
*/

/*
    Set the height and width of the widget in percentage of the window height / width.
*/
#connectWithGitMainDialog .dijitDialogPaneContent {
    background-color: #f5f5f5;
}

.rtcGitConnectorMainLayout {
    box-sizing: border-box;
    width: 80vw;
    min-width: 800px;
    min-height: 80vh;
    margin: 5px;
    position: relative;
    padding-bottom: 1em;
}

.rtcGitConnectorSelectRegisteredGitRepository {
    display: flex;
    background-color: white;
    border: 1px solid #cacaca;
    padding-left: 10px;
}

.rtcGitConnectorActionButtons {
    position: absolute;
    bottom: 0;
    right: 1em;
    font-size: 1em;
}

.rtcGitConnectorError {
    color: red;
}

.rtcGitConnectorLabelText {
    display: inline-block;
    margin-bottom: .5em;
    font-size: 1em;
    font-weight: bold;
    color: #666666;
    width: 200px;
}

.rtcGitConnectorSelectRegisteredGitRepository .rtcGitConnectorLabelText {
    margin-top: auto;
    margin-bottom: auto;
}

.rtcGitConnectorSelectList {
    flex-grow: 1;
    border-top: 0px;
    border-bottom: 0px;
    border-right: 0px;
}

/* Limit the size of the dojo select list drop-down arrow. It looks bad when any larger. */
.rtcGitConnectorSelectList .dijitArrowButton {
    width: 1em;
}

.rtcGitConnectorSelectListSpan {
    box-sizing: border-box;
    display: block;
    width: 100%;
    text-align: left;
    padding: .2em;
    font-size: 1em;
}

/* Add a light blue background to the selected option in the drop-down list. */
.dijitSelectSelectedOption .rtcGitConnectorSelectListSpan {
    background-color: #cfe5fa;
}

.rtcGitConnectorSelectListFirstLine {
    /* font-weight: bold; */
}

.rtcGitConnectorSelectListSecondLine {
    color: gray;
}

#rtcGitConnectorSelectLinkTypeContainer {
    margin-bottom: 10px;
}

.rtcGitConnectorSelectLinkType {
    display: flex;
}

.rtcGitConnectorSelectLinkType .linkTypeItem {
    display: inline-block;
    flex-grow: 1;
    padding: .5em;
    font-size: 1em;
    cursor: pointer;
    background-color: white;
    border-left-width: 1px;
    border-bottom-width: 1px;
    border-top: 0px;
    border-right: 0px;
    border-style: solid;
    border-color: #cacaca;
    transition: all 0.3s ease-out;
}

.rtcGitConnectorSelectLinkType .linkTypeItem:last-child {
    border-right-width: 1px;
}

.rtcGitConnectorSelectLinkType .linkTypeItem:hover {
    background-color: #cacaca;
}

.rtcGitConnectorSelectLinkType .linkTypeItem.selected {
    background-color: #cfe5fa;
    cursor: default;
}

.viewAndSelectSearchInput {
    flex-grow: 1;
    margin-right: .5em;
    margin-top: auto;
    margin-bottom: auto;
}

.viewAndSelectSearchButton {
    margin-right: .5em !important;
}

.viewAndSelectFilterInput {
    flex-grow: 1;
    margin-right: .5em;
    margin-top: auto;
    margin-bottom: auto;
}

.rtcGitConnectorViewAndSelectContainer {
    background-color: white;
    border: 1px solid #cacaca;
    padding: 10px;
    margin-bottom: 10px;
}

.rtcGitConnectorViewAndSelectWrapper {
    display: flex;
    width: 100%;
}

.rtcGitConnectorViewAndSelectList {
    box-sizing: border-box;
    flex-grow: 1;
    width: 100%;
    height: 200px;
    margin-right: 10px;
    border: 1px solid #cacaca;
    overflow-y: auto;
}

.rtcGitConnectorViewAndSelectListItem {
    display: flex;
    border-bottom: 1px solid #cacaca;
    padding: .2em;
    font-size: 1em;
    cursor: pointer;
    transition: all 0.3s ease-out;
}

.rtcGitConnectorViewAndSelectListControl {
    display: flex;
    border-bottom: 1px solid #cacaca;
    padding: .5em;
}

.viewAndSelectControlLabel {
    color: #666666;
    width: 75px;
    margin-top: auto;
    margin-bottom: auto;
}

.rtcGitConnectorViewItemsToLinkList .rtcGitConnectorViewAndSelectListItem:last-child {
    border-bottom-width: 0px;
}

.rtcGitConnectorViewAndSelectListItem.itemToLink {
    cursor: default;
}

.rtcGitConnectorViewAndSelectListItem:hover {
    background-color: #cacaca;
}

.rtcGitConnectorViewAndSelectListItem.selected {
    background-color: #cfe5fa;
    cursor: default;
}

.rtcGitConnectorViewAndSelectListItemButton {
    width: 2em;
    height: 100%;
    margin: auto .3em;
    font-size: 1.5em;
    color: #0645AD;
    text-align: center;
    cursor: pointer;

    /* background-color: white;
    border: 0.2em solid #0645AD;
    border-radius: .5em;
    padding: .5em; */
}

.rtcGitConnectorViewAndSelectListItemButton.addButton {
    color: green;

    /* border-color: green; */
}

.rtcGitConnectorViewAndSelectListItemButton.removeButton {
    color: darkorange;

    /* border-color: darkorange; */
}

.rtcGitConnectorViewAndSelectListItemButton.deleteButton {
    color: #CC2200;

    /* border-color: #CC2200; */
}

.rtcGitConnectorViewAndSelectListItemButton.emptyButton {
    color: #555;
    cursor: default;

    /* border-color: #555; */
}

.rtcGitConnectorViewAndSelectListItemAlreadyLinked {
    opacity: 0.6;
}

.rtcGitConnectorViewAndSelectListItemContent {
    width: 100%;
    height: 100%;
}

.rtcGitConnectorViewAndSelectDetails {
    box-sizing: border-box;
    flex-grow: 1;
    width: calc(100% - 20px);
    height: 200px;
    padding: 4px 10px;
    margin-left: 10px;
    border: 1px solid #cacaca;
    overflow-y: auto;
    overflow-x: hidden;
}

.rtcGitConnectorViewAndSelectDetailsSpan {
    display: block;
    font-size: 1em;
    padding-top: .5em;
    padding-bottom: .5em;
    border-bottom: 1px dashed #cacaca;
}

.rtcGitConnectorViewAndSelectDetailsSpan span {
    display: inline-block;
}

.rtcGitConnectorViewAndSelectDetailsLabel {
    color: #666666;
}

.rtcGitConnectorViewAndSelectDetailsSpan.rtcGitConnectorViewAndSelectDetailsLabel {
    font-weight: bold;
}

.rtcGitConnectorViewAndSelectDetailsSpan .rtcGitConnectorViewAndSelectDetailsLabel {
    width: 100px;
    vertical-align: top;
}

.viewItemsToLinkContainer {
    background-color: white;
    border: 1px solid #cacaca;
    padding: 10px;
    margin-bottom: 10px;
}

.rtcGitConnectorViewItemsToLinkList {
    width: 100%;
    border: 1px solid #cacaca;
}

.rtcGitConnectorHighlightText {
    background-color: yellowgreen;
}

#rtcGitConnectorFullPageLoadingOverlay {
    position: absolute;
    top: -1em;
    bottom: -1em;
    left: -1em;
    right: -1em;
    background-color: white;
    z-index: 10000;
    text-align: center;
    line-height: 80vh;
    font-size: 5em;
}

